# tp-c-cpp-homeworks

./: .travis.yml  README.md
hw1/: .travis.yml  CMakeLists.txt  main.c  ship.c  ship.h
hw1/src/: main.c  ship.c  ship.h  ship_test.cpp
hw2/: .gitignore  CMakeLists.txt  input.c  input.h  io.c  io.h  main.c
hw2/generator/: generator.py
hw2/lib/shared/: main.h  shared.c  shared.h
hw2/lib/static/: main.c  serial_ranking.c  serial_ranking.h  static.c  static.h
hw2/small_data/: 1.txt  2.txt  3.txt  4.txt  6.txt
